Prepare for Render and Surge deployment

--- a/static/index.html
+++ b/static/index.html
@@ -7,8 +7,8 @@
     <meta name="description"
         content="TruthLens – AI-powered Fake News Visual Analyzer. Detect image manipulation, misinformation, and AI-generated content in seconds.">
     <title>Innovision – Universal Fake News Verifier</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="icon" href="./logo.png">
+    <link rel="stylesheet" href="/static/style.css">
+    <link rel="icon" href="/static/logo.png">
     <link
         href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700;900&family=Inter:wght@300;400;600&display=swap"
         rel="stylesheet">
@@ -19,7 +19,8 @@
     <!-- Header -->
     <header class="header">
         <a href="/" class="logo">
-            <img src="./logo.png" alt="Innovision Logo" class="logo-img" style="height: 40px; margin-right: 10px;">
+            <img src="/static/logo.png" alt="Innovision Logo" class="logo-img"
+                style="height: 40px; margin-right: 10px;">
             <span class="logo-text">Innovision</span>
             <span class="logo-badge">v2.0 PRO</span>
         </a>
@@ -33,7 +34,7 @@
     <section class="hero" id="hero">
         <div class="hero-logo-container">
             <div class="scanner-line"></div>
-            <img src="./logo-big.png" alt="Innovision AI" class="hero-logo-img">
+            <img src="/static/logo-big.png" alt="Innovision AI" class="hero-logo-img">
             <div class="hero-glow"></div>
         </div>
         <h1>Unmask Visual Misinformation</h1>
@@ -191,7 +192,7 @@
         <p>Innovision &copy; 2026 &middot; Built with ❤️ by <strong>Aditya Mehta of DPS Patiala</strong></p>
     </footer>
 
-    <script src="./app.js"></script>
+    <script src="/static/app.js"></script>
 </body>
 
 </html>
